@@ -1,0 +1,2 @@
+ENABLE_SPA_OVER_HTTP        Y;
+ENABLE_X_FORWARDED_FOR      Y;
